# pyston

./: .ackrc  .dockerignore  .gitattributes  .gitignore  .gitmodules  Makefile  Makefile.pre.in  README.md  configure  configure.ac  nan.py  nan_nbody.py  pyconfig.h.in  setup.py
pyston/: CMakeLists.txt  Dockerfile.16.04  Dockerfile.18.04  Dockerfile.20.04  benchmark_requirements.txt  benchmark_requirements_nonpypy.txt  clang_wrapper.py  pgo_requirements.txt  run_profile_task.py
pyston/aot/: .gitignore  aot_diff_ir.py  aot_gen.py
pyston/conda/: build_all.py  build_and_upload.sh  build_feedstock.py  build_feedstock.sh  build_installer.sh  build_pkgs.sh  make_config.py  make_order.py  package_list.txt
pyston/conda/bolt/: build.sh  meta.yaml
pyston/conda/compiler-rt/: bld.bat  build.sh  conda_build_config.yaml  macosx_10_9.patch  meta.yaml  no_codesign.diff  test.c.in
pyston/conda/compiler-rt/patches/: 0001-no-code-sign.patch  0002-compiler-rt-Make-7.0.0-compatible-with-10.9-SDK.patch  0003-set-cmake-paths.patch
pyston/conda/installer/: LICENSE.txt  construct.yaml
pyston/conda/patches/: boost.patch  cython.patch  numba.patch  numpy.patch  numpy1.18.5.patch  pyqt.patch  vim.patch
pyston/conda/pyston/: build_base.sh  build_static.sh  meta.yaml  recipe-license.txt  variants.yaml
pyston/conda/pyston/patches/: 0000-Fix-off-by-one-error-in-_winapi_WaitForMultipleObjec.patch  0001-Add-Anaconda-Distribution-version-logic.patch  0001-Fix-off-by-one-error-in-_winapi_WaitForMultipleObjec.patch  0002-Add-Anaconda-Distribution-version-logic.patch  0002-Darwin-Add-arch-x86_64-to-UnicCCompiler-ld_args.patch  0003-Darwin-Add-arch-x86_64-to-UnicCCompiler-ld_args.patch  0003-Win32-Change-FD_SETSIZE-from-512-to-2048.patch  0004-Win32-Change-FD_SETSIZE-from-512-to-2048.patch  0004-Win32-distutils-Add-support-to-cygwinccompiler-for-V.patch  0005-Do-not-pass-g-to-GCC-when-not-Py_DEBUG.patch  0005-Win32-distutils-Add-support-to-cygwinccompiler-for-V.patch  0006-Do-not-pass-g-to-GCC-when-not-Py_DEBUG.patch  0016-Unvendor-openssl.patch  (+36 more)
pyston/conda/pyston_lite/: meta.yaml
pyston/conda/python/: build_base.sh  meta.yaml
pyston/conda/python_abi/: meta.yaml
pyston/debian/: changelog  control  copyright  postinst.ex  postrm.ex  preinst.ex  prerm.ex  pyston.install  pyston.links  pyston.postinst  pyston.prerm  rules
pyston/doc/: PERF_TRACKING.md  RELEASING.md
pyston/docker/: Dockerfile  Dockerfile.conda  Dockerfile.slim-bullseye  build_docker.sh
pyston/make_release_files/: Dockerfile.18.04  Dockerfile.20.04  Dockerfile.22.04
pyston/microbenchmarks/: gc_collection.py
pyston/nitrous/: CMakeLists.txt  Execution.cpp  Interpreter.cpp  Interpreter.h  common.h  facts.cpp  interp.cpp  interp.h  jit.cpp  jit.h  optimization_hooks.h  symbol_finder.cpp  symbol_finder.h
pyston/pystol/: CMakeLists.txt  passes.cpp  pystol.cpp  pystol.h  pystol_internal.h  recursion_check_removal.cpp
pyston/pyston_lite/: .gitignore  Makefile  aot_ceval.c  aot_ceval_jit.c  aot_ceval_jit_helper.c  aot_ceval_jit_helper.h  aot_lite.c  bolt_wheel.py  build_wheels.sh  build_wheels_macos.sh  ceval_gil310.h  ceval_gil37.h  ceval_gil39.h  compare.py  compat37.h  condvar37.h  fib.py  lib.c  opcode_targets37.h  pyston_lite_autoload.pth  setup.py
pyston/pyston_lite/autoload/: pyston_autoload.pth  pyston_lite_autoload.pth  setup.py
pyston/test/: aot_isinstance_crash.py  caches.py  deferred_stack_decref.py  find_mortal_startup_objs.py  getattr_caches.py  inplace_math.py  is_crash.py  jit_limit.py  jit_osr_limit.py  method_ics.py  openssl_dev.cnf  pyston_lite_midexecution.py  test_code_dealloc.py  test_rebuild_packages.py  test_recursion_limit.py  test_venvs.py
pyston/tools/: .gitignore  bench.py  bench_release.sh  call_sources.py  dis_jit_gdb.py  dynasm_preprocess.py  header_cleanup.py  make_portable_dir.py  make_release.sh  make_src_release.sh  patch_pip.sh  perf_flamegraph.py  perf_jit.py  symb.py  test_optimize.py  tune.py
pyston/tools/benchmarks_runner/: .gitignore  Makefile  analyze.py
(+334 files in other folders)
